@@ -15,6 +15,7 @@
 	<description>Al Ahad Attars Backend</description>
 	<properties>
 		<java.version>21</java.version>
+		<mockito.version>5.14.0</mockito.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -146,6 +147,13 @@
 							<artifactId>lombok</artifactId>
 						</exclude>
 					</excludes>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<argLine>-XX:+EnableDynamicAgentLoading -Xshare:off</argLine>
 				</configuration>
 			</plugin>
 		</plugins>
